--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,14 @@
 }
 /* #endcommon rule */
 
+/* #debug rule */
 .debug * {
     border: 1px dashed;
 }
+/* #enddebug rule */
 
+
+/* #layout rule */
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -35,6 +39,9 @@
     display: flex;
 }
 
+/* #endlayout rule */
+
+/* #header rule */
 .title {
     justify-content: center;
     align-items: center;
@@ -44,3 +51,5 @@ h1 {
     text-align: center;
     font-size: 2rem;
 }
+
+/* #endheader rule */
