--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,9 @@
 h1 {
     text-align: center;
     font-size: 2rem;
+    font-family: nerko-one, sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 /* #endheader rule */
