--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ h1 {
     font-family: nerko-one, sans-serif;
     font-weight: 400;
     font-style: normal;
+    color: orange;
 }
 
 /* #endheader rule */
