--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,9 @@
 
 /* #endlayout rule */
 
+body{
+    wid
+}
 /* #header rule */
 .title {
     justify-content: center;
@@ -50,10 +53,11 @@
 h1 {
     text-align: center;
     font-size: 2rem;
-    font-family: nerko-one, sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    font-family: nerko-one, sans-serif; 
     color: orange;
 }
 
+
 /* #endheader rule */
+
+/* #main rule */
