--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,12 @@
 .d-flex {
     display: flex;
 }
-
+.col-8 {
+    width: calc(100% / 12 * 8);
+}
+.col-4 {
+    width: calc(100% / 12 * 4);
+}
 /* #endlayout rule */
 
 
