--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,12 @@
 [class^="col-"] {
     padding: 0 0.5rem;
 }
-.justify-content-between {
+.between {
     justify-content: space-between;
 }
 .d-flex {
     display: flex;
+    align-items: center;
 }
 .col-8 {
     width: calc((100% / 12) * 8);
@@ -67,7 +68,7 @@ header{
 }
 h1 {
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-family: nerko-one, sans-serif; 
     color: orange;
 }
@@ -85,8 +86,20 @@ body{
     color: white;
     padding: 0.5rem;
     border-radius: 1rem;
+    margin-left: 0.5rem;
+
+
 }
 
 
+.py-5{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+}
+.tiramisu{
 
+    justify-content: flex-start;
+ 
+    
+}
 /* #endmain rule */
