--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@
 .container {
     margin: auto;
     max-width: 1200px;
-    width: 80%;
+    width: 60%;
 }
 
 .row {
@@ -62,10 +62,10 @@
 }
 
 .bg-color-background {
-    background-color: #f6f5f3;
+    background-color: white;
 }
 .bg-color-secondary{
-    background-color: white;
+    background-color: #f6f5f9;
 }
 img{
     max-width: 100%;
@@ -105,7 +105,7 @@ body {
     color: white;
     padding: 0.5rem;
     border-radius: 1rem;
-    margin-left: 0.5rem;
+    margin-left: rem;
     align-items: center;
 }
 
@@ -136,4 +136,24 @@ body {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
+.voto {
+    padding-right: 0.2rem;
+}
 
+.calorie{
+    background-color: #7b69a2;
+    border-radius: 0.5rem;
+    padding: 0.1rem;
+    color: white;
+}
+
+.info{
+
+    color: orange;
+
+}
+hr{
+    width: 80%;
+    margin: auto;
+    border-color: rgba(0, 0, 0, 0.151);
+}
