insert initial without icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,6 @@ hr{
 }
 .social{
     background-color: white;
-    border-radius: 40%;
-    padding: 0.4rem;
+    border-radius: 50%;
+    padding: 0.4rem 1.2rem;
 }
