--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,9 @@ img{
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
-
+.justify-content-flex-end{
+    justify-content: flex-end;
+}
 .end{
     justify-content: end;
     align-items: flex-end;
