mod section 768 with kcal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,15 @@ body {
         display: inline-block;
         padding-left: 0.5rem;
     }
+    .container{
+        width: 80%;
+    }
+    .col-md-4{
+        width: calc((100% / 12) * 4);
+    }
+    .food{
+        padding-left: 1rem;
+    }
 }
 
 
