--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,23 @@ body {
 .social {
     background-color: white;
     border-radius: 50%;
-    padding: 0.4rem 1.2rem;
+    padding: 0.5rem 0.8rem;
+    
+}
+.facebook{
+    color: blue;
+}
+.twitter{
+    color: rgb(78, 127, 233);
+}
+.instagram{
+    color: #f83bdf;
+}
+.pinterest{
+    color: red;
+}
+.youtube{
+    color: red;
 }
 
 
