--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,9 @@ body {
     color: red;
 }
 
-
+.banner{
+    display: none;
+}
 
 .presentation hr {
     border-color: rgb(255, 238, 0);
@@ -273,6 +275,9 @@ body {
         padding: 0.6rem 3.5rem;
         border-radius: 99px;
     }
+
+    .banner{
+        display: inline-block;
 }
 
 
