--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,6 +279,7 @@ body {
     .banner{
         display: inline-block;
 }
+}
 
 
 
@@ -294,5 +295,4 @@ body {
     .col-lg-4 {
         width: calc((100% / 12) * 4);
     }
-
 }
