--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,9 +196,12 @@ body {
     background-color: white;
     border-radius: 50%;
     padding: 0.5rem 0.8rem;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.219);
 
 }
-
+.text-social{
+    display: none;
+}
 .facebook {
     color: blue;
 }
@@ -225,7 +228,8 @@ body {
 
 .presentation hr {
     border-color: rgb(255, 238, 0);
-    width: 25%;
+    width: 4rem;
+
 }
 
 .tiramisu-img {
@@ -293,5 +297,17 @@ body {
 
     .col-lg-4 {
         width: calc((100% / 12) * 4);
+    }
+    .text-social{
+        display: inline-block;
+        font-size: 0.5rem;
+        text-align: center;
+        align-items: center;
+        vertical-align: middle;
+        padding-left: 0.5rem;
+        color: black;
+    }
+    .social{
+        padding: 0.6rem 1.0rem;
     }
 }
